019-ingress/ingress-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: test-service
spec:
  replicas: 5
  selector: 
    matchLabels: 
      app: test-endpoint
  template:
    metadata: 
      labels: 
        app: test-endpoint
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-backend-service
spec:
  type: ClusterIP
  selector: 
    app: test-endpoint
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - path: /somepath
            pathType: Prefix
            backend:
              service: 
                name: test-backend-service
                port: 
                  number: 80
